--- a/src/components/shared/stat/stat.html
+++ b/src/components/shared/stat/stat.html
@@ -1,5 +1,6 @@
 <template>
   <require from="../../../resources/value-converters/statModifier"></require>
+  <require from="./stat.css"></require>
 
   <div class="stat">
     <div class="stat-header">${name}</div>
