--- a/src/components/character/character.html
+++ b/src/components/character/character.html
@@ -1,7 +1,7 @@
 <template>
   <require from="./character.css"></require>
   <require from="./skill/skill"></require>
-  <require from="./stat/stat"></require>
+  <require from="../shared/stat/stat"></require>
   <require from="../../data/extra/enums"></require>
   <require from="../../resources/value-converters/select"></require>
   <div class="contentArea">
@@ -10,11 +10,11 @@
         <table class="attribute-table">
           <tr class="attribute" repeat.for="stat of data.character.stats">
             <td>
-              <stat model.bind="stat.key" edit-mode.bind="editMode"></stat>
+              <stat model.bind="stat.key"></stat>
             </td>
             <td>
               <div class="skills">
-                <skill class="skill" repeat.for="skillEnum of SkillEnums | select:stat.key" model.bind="skillEnum" edit-mode.bind="editMode"></skill>
+                <skill class="skill" repeat.for="skillEnum of SkillEnums | select:stat.key" model.bind="skillEnum"></skill>
               </div>
             </td>
           </tr>
@@ -27,49 +27,34 @@
             <h3 class="profiency-header">Profiencies</h3>
             <div class="profiency-list">
               <ul>
-                <li class="flex-container" repeat.for="prof of data.character.profiencies">
+                <li class="flex-container profiency" repeat.for="prof of data.character.profiencies">
                   <span class="flex-normal">${prof.name}</span>
-                  <button show.bind="editMode" class="fa-button red flex-fixed" click.delegate="removeProfiency(prof)"><i class="fa fa-minus-circle" aria-hidden="true"></i></button>
+                  <span class="flex-fixed type-placeholder">CHAR</span>
                 </li>
-                <li class="flex-container" repeat.for="prof of data.inventory.profiencies">
+                <li class="flex-container profiency" repeat.for="prof of data.inventory.profiencies">
                   <span class="flex-normal">${prof.name}</span>
-                  <span class="flex-fixed item-placeholder" show.bind="editMode">ITEM</span>
+                  <span class="flex-fixed type-placeholder">ITEM</span>
                 </li>
               </ul>
-              <div class="flex-container" show.bind="editMode">
-                <input class="flex-normal" type="text" value.bind="newProfiency"/>
-                <button class="add-button flex-fixed" click.delegate="addProfiency()">Add</button>
-              </div>
             </div>
           </div>
-
           <div class="traits-area">
             <h3 class="traits-header">Features and Traits</h3>
             <div class="traits-list">
               <ul>
-                <li class="flex-container" repeat.for="trait of data.character.traits">
+                <li class="flex-container trait" repeat.for="trait of data.character.traits">
                   <span class="flex-normal">${trait.name}</span>
-                  <button show.bind="editMode" class="fa-button red flex-fixed" click.delegate="removeTrait(trait)"><i class="fa fa-minus-circle" aria-hidden="true"></i></button>
+                  <span class="flex-fixed type-placeholder">CHAR</span>
                 </li>
-                <li class="flex-container" repeat.for="trait of data.inventory.traits">
+                <li class="flex-container trait" repeat.for="trait of data.inventory.traits">
                   <span class="flex-normal">${trait.name}</span>
-                  <span class="flex-fixed item-placeholder" show.bind="editMode">ITEM</span>
+                  <span class="flex-fixed type-placeholder">ITEM</span>
                 </li>
               </ul>
-              <div class="flex-container" show.bind="editMode">
-                <input class="flex-normal" type="text" value.bind="newTrait"/>
-                <button class="add-button flex-fixed" click.delegate="addTrait()">Add</button>
-              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="functionsArea">
-      <button class="functionButton" click.delegate="toggleEditMode()">
-        <span if.bind="!editMode">Edit</span>
-        <span if.bind="editMode">Save</span>
-      </button>
     </div>
   </div>
 </template>
