--- a/src/components/inventory/itemPopup/newItem.html
+++ b/src/components/inventory/itemPopup/newItem.html
@@ -1,5 +1,6 @@
 <template>
   <require from="./itemPopup.css"></require>
+  <require from="../../shared/charmod/charmod"></require>
   <require from="../../../data/extra/enums"></require>
   <require from="../../../resources/value-converters/translate"></require>
 
@@ -22,7 +23,7 @@
         <div show.bind="itemradio.checked" class="flex-container">
           <div class="textInput flex-center">
             <label>Quantity</label>
-            <input type="number" value.bind="quantity" placeholder="Quantity" />
+            <input type="number" value.bind="quantity" placeholder="quantity" />
           </div>
           <div class="flex-center itemEquippable">
             <label><input type="checkbox" class="labelCheckBox" checked.bind="equippable" />Equippable</label>
@@ -33,7 +34,7 @@
         <div show.bind="armorradio.checked" class="flex-container">
           <div class="textInput flex-center">
             <label>Base AC</label>
-            <input type="number" value.bind="baseAC" placeholder="Base AC" />
+            <input type="number" value.bind="baseAC" placeholder="base AC" />
           </div>
           <div class="textInput flex-center">
             <label>Max Dex bonus</label>
@@ -49,7 +50,7 @@
           </div>
           <div class="textInput flex-center">
             <label>Type</label>
-            <input type="text" value.bind="damageType" placeholder="Slashing" />
+            <input type="text" value.bind="damageType" placeholder="slashing" />
           </div>
         </div>
       </div>
@@ -59,54 +60,10 @@
       <div class="itemContentArea">
         <label><input type="checkbox" class="labelCheckBox" checked.bind="attunement" />Requires attunement</label>
       </div>
-
-      <!-- SKILLS -->
-      <div class="skillArea">
-        <span class="header">Skills</span>
-        <ul>
-          <li class="listItem" repeat.for="skill of additionalSkillProfiencies">
-            ${skill | translate:data.translations:'skill' }
-          </li>
-        </ul>
-        <div class="flex-container">
-          <select value.bind="selectedSkillProfiency">
-            <option repeat.for="skillEnum of SkillEnums" model.bind="skillEnum">
-              ${skillEnum | translate:data.translations:'skill' }
-            </option>
-          </select>
-          <button class="flex-fixed addButton" click.delegate="addSkillProfiency()">Add</button>
-        </div>
-      </div>
-
-      <!-- PROFIENCIES -->
-      <div class="profiencyArea">
-        <span class="header">Other profiencies</span>
-        <ul>
-          <li class="listItem" repeat.for="profiency of additionalOtherProfiencies">
-            ${profiency.name}
-          </li>
-        </ul>
-        <div class="flex-container">
-          <input type="text" placeholder="New profiency name" value.bind="newOtherProfiencyName" />
-          <button class="flex-fixed addButton" click.delegate="addOtherProfiency()">Add</button>
-        </div>
-      </div>
-
-      <!-- TRAITS -->
-      <div class="traitArea">
-        <span class="header">Traits</span>
-        <ul>
-          <li class="listItem" repeat.for="trait of additionalTraits">
-            ${trait.name}
-          </li>
-        </ul>
-        <div class="flex-container">
-          <input type="text" placeholder="New trait name" value.bind="newTraitName" />
-          <button class="flex-fixed addButton" click.delegate="addTrait()">Add</button>
-        </div>
+      <div class="charmodeArea">
+        <charmod model.bind="innerModel"></charmod>
       </div>
     </div>
-
     <div class="buttonArea">
       <button class="createButton" click.delegate="reset()">Cancel</button>
       <button class="createButton" disabled.bind="!name" click.delegate="createItemInternal()">Create</button>
