--- a/src/components/shared/charmod/charmod.html
+++ b/src/components/shared/charmod/charmod.html
@@ -47,6 +47,9 @@
         </select>
         <input type="number" value.bind="setstat.value" />
       </td>
+      <td>
+        <button class="fa-button red removeButton" click.delegate="removeSetStat(setstat)"><i class="fa fa-minus-circle" aria-hidden="true"></i></button>
+      </td>
     </tr>
     <tr repeat.for="addstat of model.addToStats">
       <td>
@@ -57,6 +60,9 @@
           <option repeat.for="statEnum of StatEnums" model.bind="statEnum">${statEnum | translate:data.translations:'stat'}</option>
         </select>
         <input type="number" value.bind="addstat.value | number" />
+      </td>
+      <td>
+        <button class="fa-button red removeButton" click.delegate="removeAddStat(addstat)"><i class="fa fa-minus-circle" aria-hidden="true"></i></button>
       </td>
     </tr>
     <tr>
