before electron test

--- a/src/components/combat/combat.html
+++ b/src/components/combat/combat.html
@@ -36,7 +36,7 @@
           <div class="infoSquare">
             <span class="header">HD</span>
             <div class="value">
-              <input class="hdInput" type="number" value.bind="hitDieNumber" />d${hitDie}
+              <input class="hdInput" type="number" value.bind="currentHD" />/${maxHD}d${hitDie}
             </div>
           </div>
         </div>
